--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Greetings!
 
-This is the source code repository for the Objective-C programming language. course provided at Faculty of Management and Information Science, Naresuan University, Thailand.
+This repository has the contains of course material and source code for the Objective-C programming language course. This course provided at Faculty of Management and Information Science, Naresuan University, Thailand.
 
 --Contributors
 * @atitp - Atit Patumvan (www.atit.patumvan.com)
